Updated code to handle duplicated timestamp